# grpc-kotlin

./: .bazelignore  .gitignore  .travis.yml  BUILD  BUILD.bazel  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  MAINTAINERS.md  METADATA  MODULE.bazel  OWNERS  README.md  REPO.bazel  WORKSPACE  bluze.textproto  build.gradle  build.gradle.kts  gradle.properties  grpc_kotlin.blueprint  grpc_kotlin_maven_install.json  index.html  kt_jvm_grpc.bzl  maven_install.json  repositories.bzl  run-test-client.sh  run-test-server.sh  settings.gradle  settings.gradle.kts  update-gh-pages.sh
.bcr/: metadata.template.json  presubmit.yml
.github/: dependabot.yml
.github/workflows/: bazel.yml  gradle.yml  gradle_arm.yaml  publish.yaml  publish.yml  release.yml
bzl-examples/bzlmod/: BUILD.bazel  MODULE.bazel  extensions.bzl  maven_install.json
bzl-examples/bzlmod/java/io/grpc/examples/bzlmod/: BUILD.bazel  Fibonacci.kt  fibonacci.proto
bzl-examples/bzlmod/javatests/io/grpc/examples/bzlmod/: BUILD.bazel  FibonacciTest.kt
compiler/: README.md  build.gradle  build.gradle.kts  stub.sh
compiler/src/main/java/io/grpc/kotlin/generator/: BUILD.bazel  GeneratorRunner.kt  GrpcClientStubGenerator.kt  GrpcCoroutineServerGenerator.kt  ProtoFileCodeGenerator.kt  ServiceCodeGenerator.kt  ServiceNameGenerator.kt  TopLevelConstantsGenerator.kt
compiler/src/main/java/io/grpc/kotlin/generator/protoc/: AbstractGeneratorRunner.kt  BUILD.bazel  ClassSimpleName.kt  CodeGenerators.kt  ConstantName.kt  Declarations.kt  DescriptorUtil.kt  GeneratorConfig.kt  JavaPackagePolicy.kt  KtPoetUtil.kt  MemberSimpleName.kt  ProtoEnumValueName.kt  ProtoFieldName.kt  ProtoFileName.kt  ProtoMethodName.kt  ProtoServiceName.kt  ProtoTypeSimpleName.kt  Scope.kt
compiler/src/main/java/io/grpc/kotlin/generator/protoc/testing/: BUILD.bazel  DeclarationsSubject.kt  FileSpecSubject.kt  FunSpecSubject.kt  TypeSpecSubject.kt
compiler/src/main/java/io/grpc/kotlin/generator/protoc/util/graph/: BUILD.bazel  TopologicalSortGraph.kt
compiler/src/main/java/io/grpc/kotlin/generator/protoc/util/sort/: BUILD.bazel  PartialOrdering.kt  TopologicalSort.kt
compiler/src/test/java/io/grpc/kotlin/generator/: BUILD.bazel  CoroutineServerImplGeneratorTest.kt  GeneratorRunnerTest.kt  GreeterCoroutineImplBase.expected  GreeterCoroutineStub.expected  GrpcClientStubGeneratorTest.kt  HelloWorldProtoGrpcKt.expected
compiler/src/test/java/io/grpc/kotlin/generator/protoc/: BUILD.bazel  ClassSimpleNameTest.kt  ConstantNameTest.kt  DeclarationsTest.kt  DescriptorUtilTest.kt  GeneratorConfigTest.kt  JavaPackagePolicyTest.kt  MemberSimpleNameTest.kt  OptionalProto3FieldTest.kt  ProtoEnumValueNameTest.kt  ProtoFieldNameTest.kt  ProtoFileNameTest.kt  ProtoMethodNameTest.kt  ProtoTypeSimpleNameTest.kt  ScopeTest.kt
compiler/src/test/java/io/grpc/kotlin/generator/protoc/testing/: BUILD.bazel  DeclarationsSubjectTest.kt  FileSpecSubjectTest.kt  FunSpecSubjectTest.kt  TypeSpecSubjectTest.kt
compiler/src/test/proto/testing/: BUILD.bazel  example3.proto  has_explicit_outer_class_name.proto  has_outer_class_name_conflict.proto  proto-file-with-hyphen.proto  rpc_name_contains_underscore.proto  serviceT.proto  service_name_conflicts_with_file.proto  test_proto3_optional.proto
example/: build.gradle
examples/: .gitignore  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle.kts
examples-android/: Procfile  README.md  build.gradle.kts  settings.gradle.kts
examples-android/android/: build.gradle.kts
examples-android/common/: build.gradle.kts
examples-android/server/: build.gradle.kts
examples/android/: build.gradle.kts
examples/client/: build.gradle.kts
examples/client/src/main/kotlin/io/grpc/examples/animals/: AnimalsClient.kt  BUILD.bazel
examples/client/src/main/kotlin/io/grpc/examples/helloworld/: BUILD.bazel  HelloWorldClient.kt  HelloWorldServer.kt
examples/client/src/main/kotlin/io/grpc/examples/routeguide/: BUILD.bazel  Database.kt  RouteGuideClient.kt
examples/native-client/src/main/kotlin/io/grpc/examples/helloworld/: BUILD.bazel  HelloWorldClient.kt
examples/protos/src/main/proto/io/grpc/examples/animals/: BUILD.bazel  dog.proto  pig.proto  sheep.proto
examples/protos/src/main/proto/io/grpc/examples/helloworld/: BUILD.bazel  hello_world.proto
examples/protos/src/main/proto/io/grpc/examples/routeguide/: BUILD.bazel  route_guide.proto
examples/server/src/main/kotlin/io/grpc/examples/animals/: AnimalsServer.kt  BUILD.bazel
examples/server/src/main/kotlin/io/grpc/examples/routeguide/: BUILD.bazel  RouteGuideServer.kt
examples/src/main/kotlin/io/grpc/examples/animals/: AnimalsClient.kt  AnimalsServer.kt  BUILD.bazel
examples/src/main/kotlin/io/grpc/examples/helloworld/: BUILD.bazel  HelloWorldClient.kt
examples/src/main/proto/: BUILD.bazel  dog.proto  hello_world.proto  pig.proto  route_guide.proto  sheep.proto
examples/stub/src/main/kotlin/io/grpc/examples/routeguide/: BUILD.bazel  Database.kt  Points.kt
formatter/: BUILD.bazel  MODULE.bazel
gradle/: libs.versions.toml
grpc-kotlin/: index-outline.html  index.html  package-list
grpc-kotlin-stub/: index-outline.html  index.html
integration_testing/: build.gradle.kts
interop_testing/: BUILD  build.gradle  build.gradle.kts
stub/: build.gradle  build.gradle.kts
stub-lite/: build.gradle
stub/src/main/java/io/grpc/kotlin/: AbstractCoroutineServerImpl.kt  AbstractCoroutineStub.kt  BUILD.bazel  CallOptionsCoroutineContext.kt  ClientCalls.kt  CoroutineContextServerInterceptor.kt  GrpcContextElement.kt  Helpers.kt  MetadataCoroutineContextInterceptor.kt  Readiness.kt  ServerCalls.kt  StubFor.kt
stub/src/test/java/io/grpc/kotlin/: AbstractCallsTest.kt  BUILD.bazel  ClientCallOptionsCoroutineContextPropagationTest.kt  ClientCallsTest.kt  CoroutineContextServerInterceptorTest.kt  FlowControlTest.kt  GeneratedCodeTest.kt  GrpcContextElementTest.kt  MetadataCoroutineContextInterceptorTest.kt  ServerCallsTest.kt
stub/src/test/proto/helloworld/: BUILD.bazel  helloworld.proto
tools/format/: BUILD.bazel  MODULE.bazel
(+192 files in other folders)
