module(
    name = "grpc_kotlin",
    # Note: the Publish-to-BCR app will patch this line to stamp the version being published.
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "protobuf", repo_name = "com_google_protobuf", version = "31.1")
bazel_dep(name = "rules_kotlin", repo_name = "io_bazel_rules_kotlin", version = "2.1.9")
bazel_dep(name = "rules_java", version = "8.15.1")
bazel_dep(name = "rules_jvm_external", version = "6.8")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "grpc-java", repo_name = "io_grpc_grpc_java", version = "1.71.0")

grpc_kotlin_maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
grpc_kotlin_maven.install(
    name = "grpc_kotlin_maven",
    # Rerun whenever adding new artifacts.
    # $ REPIN=1 bazelisk run @grpc_kotlin_maven//:pin
    artifacts = [
        "com.google.jimfs:jimfs:1.3.0",
        "com.google.truth:truth:1.4.4",
        "com.google.truth.extensions:truth-proto-extension:1.4.4",
        "com.google.protobuf:protobuf-java:4.30.2",
        "com.google.protobuf:protobuf-kotlin:4.30.2",
        "com.google.guava:guava:33.3.1-android",
        "com.squareup:kotlinpoet:1.14.2", # Max version without causing compiler errors.
        "junit:junit:4.13.2",
        "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.1",
        "org.jetbrains.kotlinx:kotlinx-coroutines-core-jvm:1.10.1",
    ],
    fetch_sources = False,
    lock_file = "//:grpc_kotlin_maven_install.json",
    generate_compat_repositories = True,
    strict_visibility = True,
)
use_repo(grpc_kotlin_maven, "grpc_kotlin_maven")
