module(
    name = "grpc_kotlin",
    # Note: the Publish-to-BCR app will patch this line to stamp the version being published.
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "protobuf", version = "31.1")
bazel_dep(name = "rules_kotlin", version = "2.1.9")
bazel_dep(name = "rules_java", version = "8.15.1")
bazel_dep(name = "rules_jvm_external", version = "6.8")
bazel_dep(name = "grpc-java", version = "1.71.0")

# Formatter.
bazel_dep(name = "aspect_rules_lint", version = "1.6.0", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2", dev_dependency = True)
bazel_dep(name = "rules_buf", version = "0.5.2", dev_dependency = True)

http_jar = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_jar")

http_jar(
    name = "google-java-format",
    sha256 = "33068bbbdce1099982ec1171f5e202898eb35f2919cf486141e439fc6e3a4203",
    url = "https://github.com/google/google-java-format/releases/download/v1.17.0/google-java-format-1.17.0-all-deps.jar",
)

grpc_kotlin_maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
grpc_kotlin_maven.install(
    name = "grpc_kotlin_maven",
    # Rerun whenever adding new artifacts.
    # $ REPIN=1 bazelisk run @grpc_kotlin_maven//:pin
    artifacts = [
        "com.google.jimfs:jimfs:1.3.0",
        "com.google.truth:truth:1.4.4",
        "com.google.truth.extensions:truth-proto-extension:1.4.4",
        "com.google.protobuf:protobuf-java:4.30.2",
        "com.google.protobuf:protobuf-kotlin:4.30.2",
        "com.google.guava:guava:33.3.1-android",
        "com.squareup:kotlinpoet:1.14.2", # Max version without causing compiler errors.
        "junit:junit:4.13.2",
        "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.1",
        "org.jetbrains.kotlinx:kotlinx-coroutines-core-jvm:1.10.1",
    ],
    fetch_sources = False,
    lock_file = "//:grpc_kotlin_maven_install.json",
    generate_compat_repositories = True,
    strict_visibility = True,
)
use_repo(grpc_kotlin_maven, "grpc_kotlin_maven")

install_ktfmt = use_extension("//:extensions.bzl", "install_ktfmt", dev_dependency = True)
use_repo(install_ktfmt, "ktfmt")

buf = use_extension("@rules_buf//buf:extensions.bzl", "buf", dev_dependency = True)
use_repo(buf, "rules_buf_toolchains")
