module(
    name = "bzlmod",
    version = "1.0",
)

bazel_dep(name = "protobuf", version = "32.0")
bazel_dep(name = "rules_kotlin", version = "2.1.9")
bazel_dep(name = "rules_jvm_external", version = "6.8")
bazel_dep(name = "grpc_kotlin", version = "0.0.0")
local_path_override(
    module_name = "grpc_kotlin",
    path = "../../",
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    # Rerun whenever adding new artifacts.
    # $ REPIN=1 bazelisk run @maven//:pin
    artifacts = [
        "com.google.truth:truth:1.4.4",
        "junit:junit:4.13.2",
        "com.google.truth.extensions:truth-proto-extension:1.4.4",
        "io.grpc:grpc-testing:1.75.0",
    ],
    fetch_sources = False,
    generate_compat_repositories = True,
    lock_file = "//:maven_install.json",
    strict_visibility = True,
)
use_repo(maven, "grpc_kotlin_maven", "maven")
