module(
    name = "format",
    version = "1.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "aspect_rules_lint", version = "1.7.0")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2")
bazel_dep(name = "rules_buf", version = "0.5.2")
bazel_dep(name = "rules_java", version = "8.15.2")
bazel_dep(name = "rules_multirun", version = "0.13.0")

http_jar = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_jar")

http_jar(
    name = "google-java-format",
    sha256 = "33068bbbdce1099982ec1171f5e202898eb35f2919cf486141e439fc6e3a4203",
    url = "https://github.com/google/google-java-format/releases/download/v1.17.0/google-java-format-1.17.0-all-deps.jar",
)

install_ktfmt = use_extension("//:extensions.bzl", "install_ktfmt")
use_repo(install_ktfmt, "ktfmt")

buf = use_extension("@rules_buf//buf:extensions.bzl", "buf")
use_repo(buf, "rules_buf_toolchains")
