load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")
load("//:kt_jvm_grpc.bzl", "kt_jvm_grpc_library")

licenses(["notice"])

package(default_visibility = ["//compiler/src/test:__subpackages__"])

proto_library(
    name = "example3_proto",
    srcs = ["example3.proto"],
    strip_import_prefix = "//compiler/src/test/proto",
    deps = ["@com_google_protobuf//:wrappers_proto"],
)

java_proto_library(
    name = "example3_java_proto",
    deps = [":example3_proto"],
)

proto_library(
    name = "has_explicit_outer_class_name_proto",
    srcs = ["has_explicit_outer_class_name.proto"],
    strip_import_prefix = "//compiler/src/test/proto",
)

java_proto_library(
    name = "has_explicit_outer_class_name_java_proto",
    deps = ["has_explicit_outer_class_name_proto"],
)

proto_library(
    name = "has_nested_class_name_conflict_proto",
    srcs = ["has_nested_class_name_conflict.proto"],
    strip_import_prefix = "//compiler/src/test/proto",
)

java_proto_library(
    name = "has_nested_class_name_conflict_java_proto",
    deps = ["has_nested_class_name_conflict_proto"],
)

proto_library(
    name = "has_outer_class_name_conflict_proto",
    srcs = ["has_outer_class_name_conflict.proto"],
    strip_import_prefix = "//compiler/src/test/proto",
)

java_proto_library(
    name = "has_outer_class_name_conflict_java_proto",
    deps = ["has_outer_class_name_conflict_proto"],
)

proto_library(
    name = "implicit_java_package_proto",
    srcs = ["implicit_java_package.proto"],
    strip_import_prefix = "//compiler/src/test/proto",
)

java_proto_library(
    name = "implicit_java_package_java_proto",
    deps = ["implicit_java_package_proto"],
)

proto_library(
    name = "proto-file-with-hyphen_proto",
    srcs = ["proto-file-with-hyphen.proto"],
    strip_import_prefix = "//compiler/src/test/proto",
)

java_proto_library(
    name = "proto-file-with-hyphen_java_proto",
    deps = ["proto-file-with-hyphen_proto"],
)

proto_library(
    name = "service_name_conflicts_with_file_proto",
    srcs = ["service_name_conflicts_with_file.proto"],
    strip_import_prefix = "//compiler/src/test/proto",
)

java_proto_library(
    name = "service_name_conflicts_with_file_java_proto",
    deps = ["service_name_conflicts_with_file_proto"],
)
