load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("//:kt_jvm_grpc.bzl", "kt_jvm_grpc_library", "kt_jvm_proto_library")

licenses(["notice"])

package(default_visibility = ["//stub/src/test:__subpackages__"])

proto_library(
    name = "hello_world_proto",
    srcs = ["helloworld.proto"],
)

kt_jvm_proto_library(
    name = "hello_world_kt_proto",
    deps = [":hello_world_proto"],
)

kt_jvm_grpc_library(
    name = "hello_world_kt_grpc",
    srcs = [":hello_world_proto"],
    deps = [":hello_world_kt_proto"],
)
