load("@rules_jvm_external//:defs.bzl", "artifact")
load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_test")

kt_jvm_test(
    name = "FibonacciTest",
    srcs = ["FibonacciTest.kt"],
    deps = [
        "//java/io/grpc/examples/bzlmod:fibonacci",
        "//java/io/grpc/examples/bzlmod:fibonacci_kt_grpc",
        "//java/io/grpc/examples/bzlmod:fibonacci_kt_proto",
        artifact("com.google.truth:truth"),
        artifact("com.google.truth.extensions:truth-proto-extension"),
        artifact("junit:junit"),
        artifact("io.grpc:grpc-testing"),
    ],
)
