load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

licenses(["notice"])

package(
    default_visibility = ["//visibility:public"],
)

kt_jvm_library(
    name = "stub",
    srcs = glob(
        ["*.kt"],
        exclude = ["GrpcContextElement.kt"],
    ),
    deps = [
        ":context",
        "@io_grpc_grpc_java//core",
        "@io_grpc_grpc_java//stub",
        "@grpc_kotlin_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core",
        "@grpc_kotlin_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
    ],
)

kt_jvm_library(
    name = "context",
    srcs = ["GrpcContextElement.kt"],
    deps = [
        "@io_grpc_grpc_java//context",
        "@grpc_kotlin_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core",
        "@grpc_kotlin_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
    ],
)
