load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library", "kt_jvm_test")

licenses(["notice"])

package(default_visibility = ["//stub/src/test:__subpackages__"])

kt_jvm_library(
    name = "AbstractCallsTest",
    testonly = True,
    srcs = [":AbstractCallsTest.kt"],
    deps = [
        "//stub/src/test/proto/helloworld:hello_world_kt_grpc",
        "@io_grpc_grpc_java//testing",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_debug",
    ],
)

kt_jvm_test(
    name = "ClientCallsTest",
    srcs = [":ClientCallsTest.kt"],
    test_class = "io.grpc.kotlin.ClientCallsTest",
    deps = [
        ":AbstractCallsTest",
        "//stub/src/test/proto/helloworld:hello_world_kt_grpc",
        "@maven//:com_google_truth_extensions_truth_proto_extension",
    ],
)

kt_jvm_test(
    name = "FlowControlTest",
    srcs = [":FlowControlTest.kt"],
    test_class = "io.grpc.kotlin.FlowControlTest",
    deps = [
        ":AbstractCallsTest",
        "//stub/src/test/proto/helloworld:hello_world_kt_grpc",
        "@maven//:com_google_truth_truth",
    ],
)

kt_jvm_test(
    name = "GeneratedCodeTest",
    srcs = [":GeneratedCodeTest.kt"],
    test_class = "io.grpc.kotlin.GeneratedCodeTest",
    deps = [
        ":AbstractCallsTest",
        "//stub/src/test/proto/helloworld:hello_world_kt_grpc",
        "@maven//:com_google_truth_extensions_truth_proto_extension",
    ],
)

kt_jvm_test(
    name = "GrpcContextElementTest",
    srcs = [":GrpcContextElementTest.kt"],
    test_class = "io.grpc.kotlin.GrpcContextElementTest",
    deps = [
        "//stub/src/main/java/io/grpc/kotlin:context",
        "@io_grpc_grpc_java//core",
        "@maven//:com_google_truth_truth",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core",
    ],
)

kt_jvm_test(
    name = "ServerCallsTest",
    srcs = [":ServerCallsTest.kt"],
    test_class = "io.grpc.kotlin.ServerCallsTest",
    deps = [
        ":AbstractCallsTest",
        "//stub/src/test/proto/helloworld:hello_world_kt_grpc",
        "@maven//:com_google_truth_extensions_truth_proto_extension",
    ],
)
