load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_binary")

licenses(["notice"])

package(default_visibility = ["//examples/src:__subpackages__"])

kt_jvm_binary(
    name = "animals_client",
    srcs = ["AnimalsClient.kt"],
    main_class = "io.grpc.examples.animals.AnimalsClientKt",
    deps = [
        "//examples/src/main/proto:animals_kt_grpc",
        "@io_grpc_grpc_java//netty",
    ],
)

kt_jvm_binary(
    name = "animals_server",
    srcs = ["AnimalsServer.kt"],
    main_class = "io.grpc.examples.animals.AnimalsServerKt",
    deps = [
        "//examples/src/main/proto:animals_kt_grpc",
        "@io_grpc_grpc_java//netty",
    ],
)
