load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_binary")

licenses(["notice"])

package(default_visibility = ["//examples/src:__subpackages__"])

kt_jvm_binary(
    name = "hello_world_client",
    srcs = ["HelloWorldClient.kt"],
    main_class = "io.grpc.examples.helloworld.HelloWorldClientKt",
    deps = [
        "//examples/src/main/proto:hello_world_kt_grpc",
        "@io_grpc_grpc_java//netty",
    ],
)

kt_jvm_binary(
    name = "hello_world_server",
    srcs = ["HelloWorldServer.kt"],
    main_class = "io.grpc.examples.helloworld.HelloWorldServerKt",
    deps = [
        "//examples/src/main/proto:hello_world_kt_grpc",
        "@io_grpc_grpc_java//netty",
    ],
)
