load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

licenses(["notice"])

package(
    default_visibility = ["//:__subpackages__"],
)

kt_jvm_library(
    name = "protoc",
    srcs = glob(["*.kt"]),
    deps = [
        "//compiler/src/main/java/io/grpc/kotlin/generator/protoc/util/graph",
        "@com_google_protobuf//:protobuf_java",
        "@com_google_guava_guava//:com_google_guava_guava",
        "@com_squareup_kotlinpoet//:com_squareup_kotlinpoet",
    ],
)
