load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

licenses(["notice"])

package(
    default_visibility = ["//:__subpackages__"],
)

kt_jvm_library(
    name = "protoc",
    srcs = glob(["*.kt"]),
    deps = [
        "//compiler/src/main/java/io/grpc/kotlin/generator/protoc/util/graph",
        "@protobuf//:protobuf_java",
        "@grpc_kotlin_maven//:com_google_guava_guava",
        "@grpc_kotlin_maven//:com_squareup_kotlinpoet",
    ],
)
