load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_binary")

licenses(["notice"])

package(default_visibility = ["//examples/src:__subpackages__"])

kt_jvm_binary(
    name = "animals_client",
    srcs = ["AnimalsClient.kt"],
    main_class = "io.grpc.examples.animals.AnimalsClientKt",
    deps = [
        "//examples/protos/src/main/proto/io/grpc/examples/animals:animals_kt_grpc",
        "//examples/protos/src/main/proto/io/grpc/examples/animals:animals_kt_proto",
        "@com_google_protobuf//:protobuf_java_util",
        "@io_grpc_grpc_java//netty",
    ],
)
