load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary")

licenses(["notice"])

package(default_visibility = ["//examples/src:__subpackages__"])

kt_jvm_binary(
    name = "animals_client",
    srcs = ["AnimalsClient.kt"],
    main_class = "io.grpc.examples.animals.AnimalsClientKt",
    deps = [
        "//examples/protos/src/main/proto/io/grpc/examples/animals:animals_kt_grpc",
        "//examples/protos/src/main/proto/io/grpc/examples/animals:animals_kt_proto",
        "@protobuf//:protobuf_java_util",
        "@grpc-java//netty",
    ],
)
